fix map z-index

--- a/src/components/yandex-map/yandex-map.scss
+++ b/src/components/yandex-map/yandex-map.scss
@@ -11,6 +11,10 @@
   position: relative;
   overflow: hidden;
   cursor: pointer;
+
+  img {
+    z-index: 1;
+  }
 }
 .map-yandex {
   cursor: pointer;
